<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/design_color">

    <Spinner
        android:id="@+id/gun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/toolbar_color"
        android:entries="@array/gunler"
        android:padding="10dp"
        android:prompt="@string/GunSec"
        android:spinnerMode="dialog" />

    <Spinner
        android:id="@+id/saat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_color"
        android:entries="@array/saatler"
        android:padding="10dp"
        android:prompt="@string/SaatSec"
        android:spinnerMode="dialog" />

    <Spinner
        android:id="@+id/ogrenci"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/toolbar_color"
        android:prompt="@string/ogrenciler"
        android:spinnerMode="dialog">

    </Spinner>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:background="@color/design_color">

       <ImageView
           android:id="@+id/foto"
           android:layout_width="75dp"
           android:layout_height="75dp"
           android:layout_marginLeft="15dp"
           android:layout_marginTop="10dp"
           android:layout_marginBottom="10dp"
           tools:srcCompat="@tools:sample/avatars" />
       <TextView
           android:id="@+id/name"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="25sp"
           android:layout_gravity="center_vertical"
           android:layout_marginLeft="25dp"
           android:textColor="@color/toolbar_color"
           android:background="@color/design_color"/>
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/design_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Ücret"
            android:textColor="@color/toolbar_color"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/ucret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:textColor="@color/toolbar_color"
            android:textSize="30sp" />
    </LinearLayout>

    <Button
        android:id="@+id/kaydet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Kaydet"
        android:textSize="30sp"
        android:background="@drawable/buttonshape"
        android:textColor="@color/toolbar_color"/>

    <ListView
        android:id="@+id/ls"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/toolbar_color">

    </ListView>



</LinearLayout>