<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/telno_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/telefon_numarası"
        android:textColor="@color/toolbar_color"
        android:textSize="30sp"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/telno_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/toolbar_color"
        app:layout_constraintStart_toEndOf="@+id/telno_txt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mail_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="20dp"
        android:text="@string/mail"
        android:textColor="@color/toolbar_color"
        android:textSize="30sp"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telno_txt" />

    <EditText
        android:id="@+id/mail_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/toolbar_color"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/mail_txt"
        app:layout_constraintTop_toBottomOf="@+id/telno_edit" />

    <TextView
        android:id="@+id/adres_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="20dp"
        android:text="@string/adres"
        android:textColor="@color/toolbar_color"
        android:textSize="30sp"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail_txt" />

    <TextView
        android:id="@+id/yakintelno_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="20dp"
        android:text="@string/veli_tel_no"
        android:textColor="@color/toolbar_color"
        android:textSize="30sp"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adres_txt" />

    <TextView
        android:id="@+id/evtelno_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="20dp"
        android:text="Ev Telefon No: "
        android:textColor="@color/toolbar_color"
        android:textSize="30sp"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yakintelno_txt" />

    <EditText
        android:id="@+id/evtelno_edit"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:ems="11"
        android:inputType="number"
        android:textColor="@color/toolbar_color"
        app:layout_constraintStart_toEndOf="@+id/evtelno_txt"
        app:layout_constraintTop_toBottomOf="@+id/yakintelno_edit" />

    <TextView
        android:id="@+id/isadresi_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="20dp"
        android:text="@string/veli_is_adres"
        android:textColor="@color/toolbar_color"
        android:textSize="30sp"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/evtelno_txt" />

    <EditText
        android:id="@+id/adres_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/toolbar_color"
        app:layout_constraintStart_toEndOf="@+id/adres_txt"
        app:layout_constraintTop_toBottomOf="@+id/mail_edit" />

    <EditText
        android:id="@+id/yakintelno_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/toolbar_color"
        app:layout_constraintStart_toEndOf="@+id/yakintelno_txt"
        app:layout_constraintTop_toBottomOf="@+id/adres_edit" />

    <EditText
        android:id="@+id/isadresi_edit"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/toolbar_color"
        app:layout_constraintStart_toEndOf="@+id/isadresi_txt"
        app:layout_constraintTop_toBottomOf="@+id/evtelno_edit" />

    <ImageView
        android:id="@+id/imageİnvert"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="240dp"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="241dp"
        android:layout_marginRight="241dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isadresi_edit"
        app:srcCompat="@drawable/ic_invert_colors_black_24dp"
        tools:ignore="VectorDrawableCompat" />

</android.support.constraint.ConstraintLayout>